--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,6 @@
 name: MotdUI
-version: 1.0
+version: 1.0.0
 api: 3.0.0
 main: Callum\Main
 author: CallumRawlinson
-website: https://github.com/callumrawlinson
-pluginlink: ttps://github.com/callumrawlinson
+website: https://github.com/callumrawlinson/MOTH-UI
